--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
 <div id="paint">
     <div id="tool-panel">
         <div class="tool-panel-item"><i class="fa fa-download" data-tool="download" aria-hidden="true"></i></div>
-        <div class="tool-panel-item"><i class="fa fa-paint-brush" data-tool="brush" aria-hidden="true"></i></div>
+        <div class="tool-panel-item active"><i class="fa fa-paint-brush" data-tool="brush" aria-hidden="true"></i></div>
         <div class="tool-panel-item"><i class="fa fa-eraser" data-tool="eraser" aria-hidden="true"></i></div>
-        <div class="tool-panel-item"><i class="fas fa-fill-drip" data-tool='fill' ></i></div>
+        <div class="tool-panel-item"><i class="fas fa-fill-drip" data-tool='fill'></i></div>
         <div class="tool-panel-item"><i class="far fa-window-minimize" data-tool="line"></i></div>
         <div class="tool-panel-item"><i class="far fa-square" data-tool="rectangle"></i></div>
         <div class="tool-panel-item">
@@ -31,7 +31,7 @@
     </div>
     <div>
     <div id="color-panel">
-        <div class="color-panel-item" data-color="black"></div>
+        <div class="color-panel-item active" data-color="black"></div>
         <div class="color-panel-item" data-color="green"></div>
         <div class="color-panel-item" data-color="orange"></div>
         <div class="color-panel-item" data-color="red"></div>
@@ -46,7 +46,7 @@
     </div>
 </div>
 <script src="./js/variables.js"></script>
-<script src="./js/tools.js"></script>
+<script src="./js/drawTools.js"></script>
 <script src="./js/changeSize.js"></script>
 <script src="./js/utils.js"></script>
 <script src="./js/script.js"></script>
